新增导航栏————响应式设计(2)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style-b.css" type="text/css" media="screen and (min-width: 992px) and (max-width: 1200px)">
     <link rel="stylesheet" href="style-c.css" type="text/css" media="screen and (min-width: 800px) and (max-width: 992px)">
     <link rel="stylesheet" href="style-d.css" type="text/css" media="screen and (max-width: 800px)">
+    
     <title>Document</title>
 </head>
 <body>
@@ -38,15 +39,15 @@
             <!-- 中间 -->
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu" aria-expanded="true">
+                    <button type="button" class="navbar-toggle" id="btn-click" >
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div class="container-collapse">
-                    <div class="container-collapse-nav">
-                        <div class="container-collapse-nav-tab">
+                <div class="container-collapse" >
+                    <div class="container-collapse-nav" id="nav-collapse">
+                        <div class="container-collapse-nav-tab tab">
                             <a href="index.html">                               
                                 <span class="menu-text">首页</span>
                                 <img src="./zhinanzhen.png" class="menu-icon" alt="zhinanzhen">
@@ -75,10 +76,7 @@
      </nav>
      <!-- 中间部分 -->
      <div class="container body">1</div>
-
-<script>
-
-</script>
+<script src="javascript.js"></script>
 </html>
 </body>
 </html>
