--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style-a.css" type="text/css" media="screen and (min-width: 1200px)">
     <link rel="stylesheet" href="style-b.css" type="text/css" media="screen and (min-width: 992px) and (max-width: 1200px)">
     <link rel="stylesheet" href="style-c.css" type="text/css" media="screen and (min-width: 800px) and (max-width: 992px)">
-    <link rel="stylesheet" href="style-d.css" type="text/css" media="screen and (max-width: 800px)">
-    
+    <link rel="stylesheet" href="style-d.css" type="text/css" media="screen and (max-width: 800px)">    
     <title>Document</title>
 </head>
 <body>
@@ -63,9 +62,8 @@
                             <div class="container-collapse-nav-search-limit">
                                 <input type="search" name="search" placeholder="搜索" class="search">
                                 <a class="search-btn" href="">
-                                    <img src="search1.png"  alt="search">
-                                    
-                                </a>                                
+                                    <img src="search1.png" class="search-img" alt="search">
+                                </a>
                             </div>
                         </div>
                      </div>
