--- a/index.html
+++ b/index.html
@@ -60,10 +60,27 @@
                         </div>
                         <div class="container-collapse-nav-search">
                             <div class="container-collapse-nav-search-limit">
-                                <input type="search" name="search" placeholder="搜索" class="search">
-                                <a class="search-btn" href="">
-                                    <img src="search1.png" class="search-img" alt="search">
-                                </a>
+                                <input type="search" name="search" placeholder="搜索" class="search-1" id="search-input">
+                                <div class="container-collapse-nav-search-limit-img" id="search-img">
+                                    <a class="search-btn" href="">
+                                        <img src="search1.png" class="search-img" alt="search" id="search-img-a">
+                                    </a>
+                                </div>                               
+                                <div id="navbar-search-tips">
+                                    <div class="trangle"></div>
+                                    <div class="search-recent">
+                                        <ul class="search-recent-item-wrap"> 
+                                            <li>
+                                                <a href="" target="_blank">
+                                                    <i class="iconfont ic-search-history"></i>
+                                                    <span></span>
+                                                    <i class="iconfont ic-unfollow"></i>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
                      </div>
