新增导航栏————搜索框回车事件/完成

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             </div>
             <div class="style-mode-btn">
                 <img src="./Aa.png" class="style-mode-btn-image" alt="Aa">
-
             </div>
             <!-- 中间 -->
             <div class="container">
@@ -62,7 +61,7 @@
                             <div class="container-collapse-nav-search-limit">
                                 <input type="search" name="search" placeholder="搜索" class="search-1" id="search-input">
                                 <div class="container-collapse-nav-search-limit-img" id="search-img">
-                                    <a class="search-btn" href="">
+                                    <a class="search-btn" href="result.html">
                                         <img src="search1.png" class="search-img" alt="search" id="search-img-a">
                                     </a>
                                 </div>                               
