新增导航栏————搜索框历史记录(1)

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                                         <img src="search1.png" class="search-img" alt="search" id="search-img-a">
                                     </a>
                                 </div>                               
-                                <div id="navbar-search-tips">
+                                <div id="navbar-search-tips" >
                                     <div class="trangle"></div>
-                                    <div class="search-recent">
-                                        <ul class="search-recent-item-wrap"> 
-                                            <li>
+                                    <div class="search-recent" id="search-recent-id">
+                                        <ul class="search-recent-item-wrap" id="search-recent-id-ul"> 
+                                            <!-- <li>
                                                 <a href="" target="_blank">
                                                     <i class="iconfont ic-search-history"></i>
                                                     <span></span>
                                                     <i class="iconfont ic-unfollow"></i>
                                                 </a>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
