新增导航栏————搜索框历史记录(5)/完成

--- a/pages/index.html
+++ b/pages/index.html
@@ -63,7 +63,19 @@
                         <div class="switch-btn">繁</div>
                     </div>
                 </div>
-            </div> 
+            </div>
+            <!-- 阅读模式弹窗 -->
+            <div class="nav-beta-click" id="nav-beta-click">
+                    <div class="nav-beta-back" id="nav-beta-back"></div>
+                    <div class="nav-beta-window" id="nav-beta-window-div" >
+                        <h4>简书钻相关功能，目前仅能在 &#10;<span>简书APP</span>查看</h4>
+                        <div>
+                            <img src="../images/jianshu-code.png" alt="jianshu-code">
+                        </div>
+                        <p>扫码下载 简书App</p>
+                        <div class="nav-beta-window-known" id="nav-beta-window">我知道了</div>
+                </div>
+            </div>
             <!-- 中间 -->
             <div class="container">
                 <div class="navbar-header">
@@ -117,19 +129,10 @@
             </div>            
         </div>
      </nav>
+     
      <!-- 中间部分 -->
      <div class="container body">1</div>
-     <div class="nav-beta-click" id="nav-beta-click">
-            <div class="nav-beta-back" id="nav-beta-back"></div>
-            <div class="nav-beta-window" id="nav-beta-window-div" >
-                <h4>简书钻相关功能，目前仅能在 &#10;<span>简书APP</span>查看</h4>
-                <div>
-                    <img src="../images/jianshu-code.png" alt="jianshu-code">
-                </div>
-                <p>扫码下载 简书App</p>
-                <div class="nav-beta-window-known" id="nav-beta-window">我知道了</div>
-            </div>
-        </div>
+     
 <script src="../js/screen-width.js"></script>
 <script src="../js/search.js"></script>
 <script src="../js/search-history.js"></script>
